--- a/Tasks.ipynb
+++ b/Tasks.ipynb
@@ -10,14 +10,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from typing import List, Any, Dict\n",
+    "from typing import List, Any, Dict, Optional\n",
     "from collections import Counter, namedtuple\n",
     "import itertools\n",
-    "import re"
+    "import re\n",
+    "import dataclasses"
    ]
   },
   {
@@ -816,7 +817,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -824,24 +825,76 @@
      "output_type": "stream",
      "text": [
       "abd\n",
+      "Empty String\n",
       "Empty String\n"
      ]
     }
    ],
    "source": [
+    "@dataclasses.dataclass\n",
+    "class ProcessedChar:\n",
+    "    def __init__(self, char: str, index: Optional[int], is_removed: bool = False):\n",
+    "        self.index = index\n",
+    "        self.is_removed = is_removed\n",
+    "        self.char = char\n",
+    "        self.hash = f'{char}_{index}'\n",
+    "\n",
     "test_string_not_empty = \"aaabccddd\"\n",
     "test_string_empty = \"aabbcc\"\n",
+    "test_string_multy_steps = \"abba\"\n",
     "\n",
-    "import itertools\n",
+    "def super_reduced_string(input: str):\n",
+    "\n",
+    "    def process_string_inner(input_inner: str):\n",
+    "        \n",
+    "        processed_chars: Dict[str, ProcessedChar] = {}\n",
+    "\n",
+    "        for char_ind in range(len(input_inner)):\n",
+    "\n",
+    "            next_char_ind = char_ind + 1 if char_ind != len(input_inner) - 1 else None\n",
+    "            next_char = input_inner[next_char_ind] if next_char_ind else None\n",
+    "\n",
+    "            current_char_item = ProcessedChar(char=input_inner[char_ind], index=char_ind)\n",
+    "            next_char_item = ProcessedChar(char=next_char, index=next_char_ind)\n",
+    "\n",
+    "            retrieved_current_char = processed_chars.get(current_char_item.hash)\n",
+    "            retrieved_next_char = processed_chars.get(next_char_item.hash)\n",
+    "\n",
+    "            if retrieved_next_char:\n",
+    "                if retrieved_next_char.is_removed:\n",
+    "                    continue\n",
+    "\n",
+    "            if retrieved_current_char:\n",
+    "                if retrieved_current_char.is_removed:\n",
+    "                    continue\n",
+    "\n",
+    "            if current_char_item.char == next_char_item.char:\n",
+    "                current_char_item.is_removed = True\n",
+    "                next_char_item.is_removed = True\n",
+    "\n",
+    "            processed_chars[current_char_item.hash] = current_char_item\n",
+    "            processed_chars[next_char_item.hash] = next_char_item\n",
+    "\n",
+    "        final_chars = [char.char for char in processed_chars.values() if char.is_removed == False and char.char]\n",
+    "        return ''.join(final_chars)\n",
+    "\n",
+    "    buffer_string = input\n",
     "\n",
     "\n",
-    "def super_reduced_string(input: str) -> str:\n",
-    "    chunks = [(input[ind], input[ind + 1]) if ind != (len(input) - 1) else (input[ind], None) for ind in range(0, len(input), 2) ]\n",
-    "    final_str = ''.join(list(filter(None, itertools.chain.from_iterable([[val1, val2] for (val1, val2) in chunks if val1 != val2]))))\n",
-    "    return final_str if final_str else 'Empty String'\n",
+    "    while True:\n",
+    "\n",
+    "        buffer_string = process_string_inner(buffer_string)\n",
+    "\n",
+    "        if not buffer_string or max(Counter(list(buffer_string)).values()) == 1:\n",
+    "            break\n",
+    "\n",
+    "    return buffer_string if buffer_string else \"Empty String\"  \n",
+    "\n",
+    "\n",
     "\n",
     "print(super_reduced_string(test_string_not_empty))\n",
-    "print(super_reduced_string(test_string_empty))\n"
+    "print(super_reduced_string(test_string_empty))\n",
+    "print(super_reduced_string(test_string_multy_steps))\n"
    ]
   },
   {
